// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sitewide Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="tertiary-nav dragscroll"
  >
    <div>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
    <div>
      <button
        className="pill secondary active"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  127760,
                ],
                "f0ac",
                "M352 256c0 22.2-1.2 43.6-3.3 64H163.3c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64H348.7c2.2 20.4 3.3 41.8 3.3 64zm28.8-64H503.9c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64H380.8c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32H376.7c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0H167.7c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0H18.6C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192H131.2c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64H8.1C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6H344.3c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352H135.3zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6H493.4z",
              ],
              "iconName": "globe",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Global
      </button>
    </div>
  </div>
  <small>
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className=""
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [
              "info-circle",
            ],
            "f05a",
            "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z",
          ],
          "iconName": "circle-info",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
     
    <a
      href="https://listenbrainz.readthedocs.io/en/latest/general/data-update-intervals.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      How often are my stats updated?
    </a>
  </small>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release-group"
            range="week"
            terminology="album"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
</div>
`;

exports[`User Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="tertiary-nav dragscroll"
  >
    <div>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
    <div>
      <button
        className="pill secondary active"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [
                  128100,
                  62144,
                ],
                "f007",
                "M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z",
              ],
              "iconName": "user",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         
        test_user
      </button>
      <button
        className="pill secondary "
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          beat={false}
          beatFade={false}
          border={false}
          bounce={false}
          className=""
          fade={false}
          fixedWidth={false}
          flip={false}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [
                  127760,
                ],
                "f0ac",
                "M352 256c0 22.2-1.2 43.6-3.3 64H163.3c-2.2-20.4-3.3-41.8-3.3-64s1.2-43.6 3.3-64H348.7c2.2 20.4 3.3 41.8 3.3 64zm28.8-64H503.9c5.3 20.5 8.1 41.9 8.1 64s-2.8 43.5-8.1 64H380.8c2.1-20.6 3.2-42 3.2-64s-1.1-43.4-3.2-64zm112.6-32H376.7c-10-63.9-29.8-117.4-55.3-151.6c78.3 20.7 142 77.5 171.9 151.6zm-149.1 0H167.7c6.1-36.4 15.5-68.6 27-94.7c10.5-23.6 22.2-40.7 33.5-51.5C239.4 3.2 248.7 0 256 0s16.6 3.2 27.8 13.8c11.3 10.8 23 27.9 33.5 51.5c11.6 26 20.9 58.2 27 94.7zm-209 0H18.6C48.6 85.9 112.2 29.1 190.6 8.4C165.1 42.6 145.3 96.1 135.3 160zM8.1 192H131.2c-2.1 20.6-3.2 42-3.2 64s1.1 43.4 3.2 64H8.1C2.8 299.5 0 278.1 0 256s2.8-43.5 8.1-64zM194.7 446.6c-11.6-26-20.9-58.2-27-94.6H344.3c-6.1 36.4-15.5 68.6-27 94.6c-10.5 23.6-22.2 40.7-33.5 51.5C272.6 508.8 263.3 512 256 512s-16.6-3.2-27.8-13.8c-11.3-10.8-23-27.9-33.5-51.5zM135.3 352c10 63.9 29.8 117.4 55.3 151.6C112.2 482.9 48.6 426.1 18.6 352H135.3zm358.1 0c-30 74.1-93.6 130.9-171.9 151.6c25.5-34.2 45.2-87.7 55.3-151.6H493.4z",
              ],
              "iconName": "globe",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          maskId={null}
          pull={null}
          pulse={false}
          rotation={null}
          shake={false}
          size={null}
          spin={false}
          spinPulse={false}
          spinReverse={false}
          swapOpacity={false}
          symbol={false}
          title=""
          titleId={null}
          transform={null}
        />
         Global
      </button>
    </div>
  </div>
  <small>
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className=""
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [
              "info-circle",
            ],
            "f05a",
            "M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z",
          ],
          "iconName": "circle-info",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
     
    <a
      href="https://listenbrainz.readthedocs.io/en/latest/general/data-update-intervals.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      How often are my stats updated?
    </a>
  </small>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release-group"
            range="week"
            terminology="album"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="daily-activity"
  >
    <ErrorBoundary>
      <UserDailyActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
</div>
`;
